Added a print statement and moved the output of a table

--- a/double3_sma_nb.ipynb
+++ b/double3_sma_nb.ipynb
@@ -541,9 +541,18 @@
    "source": [
     "# read in the renko data\n",
     "renko_full_data = pd.read_csv(f'renko_full_data_{brick_size_str}.csv')\n",
+    "print(f'renko_full_data_{brick_size_str}.csv')\n",
     "# convert date to datetime\n",
     "renko_full_data['datetime'] = pd.to_datetime(renko_full_data['datetime'], format='%Y-%m-%d %H:%M:%S.%f')\n",
-    "renko_full_data = renko_full_data.set_index('datetime')\n",
+    "renko_full_data = renko_full_data.set_index('datetime')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "renko_full_data"
    ]
   },
