Added news for the week

--- a/editing_calendar_statement.ipynb
+++ b/editing_calendar_statement.ipynb
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/MQL4/Files/calendar_statement_2024_3_3.csv'"
+       "'C:/Users/WilliamFetzner/AppData/Roaming/MetaQuotes/Terminal/0C2BFA140CA8FBEFEDCADDDEDD61AA24/MQL4/Files/calendar_statement_2024_3_10.csv'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,190 +76,162 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2024.03.04 10:00:00</td>\n",
-       "      <td>(Spain) Unemployment Change</td>\n",
+       "      <td>2024.03.11 10:00:00</td>\n",
+       "      <td>(Spain) Retail Sales MoM</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2024.03.05 10:15:00</td>\n",
-       "      <td>(Spain) HCOB Services PMI</td>\n",
+       "      <td>2024.03.11 10:00:00</td>\n",
+       "      <td>(Spain) Retail Sales YoY</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2024.03.05 10:45:00</td>\n",
-       "      <td>(Italy) HCOB Services PMI</td>\n",
+       "      <td>2024.03.12 09:00:00</td>\n",
+       "      <td>(Germany) CPI</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2024.03.05 10:50:00</td>\n",
-       "      <td>(France) HCOB Services PMI</td>\n",
+       "      <td>2024.03.12 14:30:00</td>\n",
+       "      <td>(United States) CPI</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2024.03.05 10:55:00</td>\n",
-       "      <td>(Germany) HCOB Services PMI</td>\n",
+       "      <td>2024.03.12 14:30:00</td>\n",
+       "      <td>(United States) Inflation Rate MoM</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>2024.03.05 11:00:00</td>\n",
-       "      <td>(Euro Area) HCOB Services PMI</td>\n",
+       "      <td>2024.03.12 14:30:00</td>\n",
+       "      <td>(United States) CPI s.a</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>2024.03.05 16:45:00</td>\n",
-       "      <td>(United States) S&amp;P Global Services PMI</td>\n",
+       "      <td>2024.03.12 14:30:00</td>\n",
+       "      <td>(United States) Core Inflation Rate MoM</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>2024.03.05 17:00:00</td>\n",
-       "      <td>(United States) ISM Services PMI</td>\n",
+       "      <td>2024.03.12 14:30:00</td>\n",
+       "      <td>(United States) Core Inflation Rate YoY</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>2024.03.06 09:00:00</td>\n",
-       "      <td>(Germany) Balance of Trade</td>\n",
+       "      <td>2024.03.12 14:30:00</td>\n",
+       "      <td>(United States) Inflation Rate YoY</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>2024.03.06 12:00:00</td>\n",
-       "      <td>(Euro Area) Retail Sales YoY</td>\n",
+       "      <td>2024.03.14 10:00:00</td>\n",
+       "      <td>(Spain) CPI</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>2024.03.06 12:00:00</td>\n",
-       "      <td>(Euro Area) Retail Sales MoM</td>\n",
+       "      <td>2024.03.14 14:30:00</td>\n",
+       "      <td>(United States) PPI MoM</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>2024.03.06 15:15:00</td>\n",
-       "      <td>(United States) ADP Employment Change</td>\n",
+       "      <td>2024.03.14 14:30:00</td>\n",
+       "      <td>(United States) Retail Sales Ex Gas/Autos MoM</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>2024.03.06 17:00:00</td>\n",
-       "      <td>(United States) JOLTs Job Openings</td>\n",
+       "      <td>2024.03.14 14:30:00</td>\n",
+       "      <td>(United States) Retail Sales MoM</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>2024.03.06 17:00:00</td>\n",
-       "      <td>(United States) Fed Chair Powell Testimony</td>\n",
+       "      <td>2024.03.14 14:30:00</td>\n",
+       "      <td>(United States) Retail Sales YoY</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>2024.03.07 15:15:00</td>\n",
-       "      <td>(Euro Area) Deposit Facility Rate</td>\n",
+       "      <td>2024.03.14 14:30:00</td>\n",
+       "      <td>(United States) Retail Sales Ex Autos MoM</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>2024.03.07 15:15:00</td>\n",
-       "      <td>(Euro Area) ECB Interest Rate Decision</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2024.03.07 15:30:00</td>\n",
-       "      <td>(United States) Continuing Jobless Claims</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>2024.03.07 15:30:00</td>\n",
-       "      <td>(United States) Initial Jobless Claims</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>2024.03.07 15:30:00</td>\n",
+       "      <td>2024.03.14 14:30:00</td>\n",
        "      <td>(United States) Jobless Claims 4-week Average</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2024.03.14 14:30:00</td>\n",
+       "      <td>(United States) Initial Jobless Claims</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2024.03.14 14:30:00</td>\n",
+       "      <td>(United States) Continuing Jobless Claims</td>\n",
+       "      <td>High</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2024.03.14 20:00:00</td>\n",
+       "      <td>(Euro Area) ECB Guindos Speech</td>\n",
+       "      <td>High</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>2024.03.07 15:45:00</td>\n",
-       "      <td>(Euro Area) ECB Press Conference</td>\n",
+       "      <td>2024.03.15 12:00:00</td>\n",
+       "      <td>(Italy) Retail Sales YoY</td>\n",
        "      <td>High</td>\n",
        "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
-       "      <td>2024.03.07 17:00:00</td>\n",
-       "      <td>(United States) Fed Chair Powell Testimony</td>\n",
+       "      <td>2024.03.15 12:00:00</td>\n",
+       "      <td>(Italy) Retail Sales MoM</td>\n",
        "      <td>High</td>\n",
-       "      <td>USD</td>\n",
+       "      <td>EUR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
-       "      <td>2024.03.08 12:00:00</td>\n",
-       "      <td>(Euro Area) Employment Change QoQ</td>\n",
+       "      <td>2024.03.15 14:30:00</td>\n",
+       "      <td>(United States) NY Empire State Manufacturing ...</td>\n",
        "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
+       "      <td>USD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
-       "      <td>2024.03.08 12:00:00</td>\n",
-       "      <td>(Euro Area) Employment Change YoY</td>\n",
-       "      <td>High</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>2024.03.08 15:30:00</td>\n",
-       "      <td>(United States) U-6 Unemployment Rate</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>2024.03.08 15:30:00</td>\n",
-       "      <td>(United States) Non Farm Payrolls</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>2024.03.08 15:30:00</td>\n",
-       "      <td>(United States) Unemployment Rate</td>\n",
-       "      <td>High</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>2024.03.08 15:30:00</td>\n",
-       "      <td>(United States) Nonfarm Payrolls Private</td>\n",
+       "      <td>2024.03.15 16:00:00</td>\n",
+       "      <td>(United States) Michigan Consumer Sentiment</td>\n",
        "      <td>High</td>\n",
        "      <td>USD</td>\n",
        "    </tr>\n",
@@ -268,66 +240,58 @@
        "</div>"
       ],
       "text/plain": [
-       "                   Date                                          Event Impact  \\\n",
-       "0   2024.03.04 10:00:00                    (Spain) Unemployment Change   High   \n",
-       "1   2024.03.05 10:15:00                      (Spain) HCOB Services PMI   High   \n",
-       "2   2024.03.05 10:45:00                      (Italy) HCOB Services PMI   High   \n",
-       "3   2024.03.05 10:50:00                     (France) HCOB Services PMI   High   \n",
-       "4   2024.03.05 10:55:00                    (Germany) HCOB Services PMI   High   \n",
-       "5   2024.03.05 11:00:00                  (Euro Area) HCOB Services PMI   High   \n",
-       "6   2024.03.05 16:45:00        (United States) S&P Global Services PMI   High   \n",
-       "7   2024.03.05 17:00:00               (United States) ISM Services PMI   High   \n",
-       "8   2024.03.06 09:00:00                     (Germany) Balance of Trade   High   \n",
-       "9   2024.03.06 12:00:00                   (Euro Area) Retail Sales YoY   High   \n",
-       "10  2024.03.06 12:00:00                   (Euro Area) Retail Sales MoM   High   \n",
-       "11  2024.03.06 15:15:00          (United States) ADP Employment Change   High   \n",
-       "12  2024.03.06 17:00:00             (United States) JOLTs Job Openings   High   \n",
-       "13  2024.03.06 17:00:00     (United States) Fed Chair Powell Testimony   High   \n",
-       "14  2024.03.07 15:15:00              (Euro Area) Deposit Facility Rate   High   \n",
-       "15  2024.03.07 15:15:00         (Euro Area) ECB Interest Rate Decision   High   \n",
-       "16  2024.03.07 15:30:00      (United States) Continuing Jobless Claims   High   \n",
-       "17  2024.03.07 15:30:00         (United States) Initial Jobless Claims   High   \n",
-       "18  2024.03.07 15:30:00  (United States) Jobless Claims 4-week Average   High   \n",
-       "19  2024.03.07 15:45:00               (Euro Area) ECB Press Conference   High   \n",
-       "20  2024.03.07 17:00:00     (United States) Fed Chair Powell Testimony   High   \n",
-       "21  2024.03.08 12:00:00              (Euro Area) Employment Change QoQ   High   \n",
-       "22  2024.03.08 12:00:00              (Euro Area) Employment Change YoY   High   \n",
-       "23  2024.03.08 15:30:00          (United States) U-6 Unemployment Rate   High   \n",
-       "24  2024.03.08 15:30:00              (United States) Non Farm Payrolls   High   \n",
-       "25  2024.03.08 15:30:00              (United States) Unemployment Rate   High   \n",
-       "26  2024.03.08 15:30:00       (United States) Nonfarm Payrolls Private   High   \n",
+       "                   Date                                              Event  \\\n",
+       "0   2024.03.11 10:00:00                           (Spain) Retail Sales MoM   \n",
+       "1   2024.03.11 10:00:00                           (Spain) Retail Sales YoY   \n",
+       "2   2024.03.12 09:00:00                                      (Germany) CPI   \n",
+       "3   2024.03.12 14:30:00                                (United States) CPI   \n",
+       "4   2024.03.12 14:30:00                 (United States) Inflation Rate MoM   \n",
+       "5   2024.03.12 14:30:00                            (United States) CPI s.a   \n",
+       "6   2024.03.12 14:30:00            (United States) Core Inflation Rate MoM   \n",
+       "7   2024.03.12 14:30:00            (United States) Core Inflation Rate YoY   \n",
+       "8   2024.03.12 14:30:00                 (United States) Inflation Rate YoY   \n",
+       "9   2024.03.14 10:00:00                                        (Spain) CPI   \n",
+       "10  2024.03.14 14:30:00                            (United States) PPI MoM   \n",
+       "11  2024.03.14 14:30:00      (United States) Retail Sales Ex Gas/Autos MoM   \n",
+       "12  2024.03.14 14:30:00                   (United States) Retail Sales MoM   \n",
+       "13  2024.03.14 14:30:00                   (United States) Retail Sales YoY   \n",
+       "14  2024.03.14 14:30:00          (United States) Retail Sales Ex Autos MoM   \n",
+       "15  2024.03.14 14:30:00      (United States) Jobless Claims 4-week Average   \n",
+       "16  2024.03.14 14:30:00             (United States) Initial Jobless Claims   \n",
+       "17  2024.03.14 14:30:00          (United States) Continuing Jobless Claims   \n",
+       "18  2024.03.14 20:00:00                     (Euro Area) ECB Guindos Speech   \n",
+       "19  2024.03.15 12:00:00                           (Italy) Retail Sales YoY   \n",
+       "20  2024.03.15 12:00:00                           (Italy) Retail Sales MoM   \n",
+       "21  2024.03.15 14:30:00  (United States) NY Empire State Manufacturing ...   \n",
+       "22  2024.03.15 16:00:00        (United States) Michigan Consumer Sentiment   \n",
        "\n",
-       "   Currency  \n",
-       "0       EUR  \n",
-       "1       EUR  \n",
-       "2       EUR  \n",
-       "3       EUR  \n",
-       "4       EUR  \n",
-       "5       EUR  \n",
-       "6       USD  \n",
-       "7       USD  \n",
-       "8       EUR  \n",
-       "9       EUR  \n",
-       "10      EUR  \n",
-       "11      USD  \n",
-       "12      USD  \n",
-       "13      USD  \n",
-       "14      EUR  \n",
-       "15      EUR  \n",
-       "16      USD  \n",
-       "17      USD  \n",
-       "18      USD  \n",
-       "19      EUR  \n",
-       "20      USD  \n",
-       "21      EUR  \n",
-       "22      EUR  \n",
-       "23      USD  \n",
-       "24      USD  \n",
-       "25      USD  \n",
-       "26      USD  "
+       "   Impact Currency  \n",
+       "0    High      EUR  \n",
+       "1    High      EUR  \n",
+       "2    High      EUR  \n",
+       "3    High      USD  \n",
+       "4    High      USD  \n",
+       "5    High      USD  \n",
+       "6    High      USD  \n",
+       "7    High      USD  \n",
+       "8    High      USD  \n",
+       "9    High      EUR  \n",
+       "10   High      USD  \n",
+       "11   High      USD  \n",
+       "12   High      USD  \n",
+       "13   High      USD  \n",
+       "14   High      USD  \n",
+       "15   High      USD  \n",
+       "16   High      USD  \n",
+       "17   High      USD  \n",
+       "18   High      EUR  \n",
+       "19   High      EUR  \n",
+       "20   High      EUR  \n",
+       "21   High      USD  \n",
+       "22   High      USD  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
