--- a/double3_sma_nb.ipynb
+++ b/double3_sma_nb.ipynb
@@ -3940,7 +3940,7 @@
     "profit_df['entry_time'] = pd.to_datetime(profit_df['entry_time'])\n",
     "profit_df_new_index = profit_df.set_index('entry_time')\n",
     "# find the sum of the nova and msolutions profit for each month\n",
-    "profit_df_monthly = profit_df_new_index.resample('M').agg({'nova_profit': 'sum', 'msolutions_profit': 'sum'})\n",
+    "profit_df_monthly = profit_df_new_index.resample('ME').agg({'nova_profit': 'sum', 'msolutions_profit': 'sum'})\n",
     "# fill the null values with 0\n",
     "profit_df_monthly.fillna(0, inplace=True)\n",
     "# find the min, max, and mean of nova_profit\n",
