changed calculation from mean to median

--- a/Avg_spread.ipynb
+++ b/Avg_spread.ipynb
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1280,47 +1280,47 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Spread Buy</th>\n",
-       "      <td>0.000100</td>\n",
-       "      <td>0.000085</td>\n",
+       "      <td>0.000095</td>\n",
+       "      <td>0.00007</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Spread Sell</th>\n",
-       "      <td>-0.000125</td>\n",
-       "      <td>-0.000047</td>\n",
+       "      <td>-0.000110</td>\n",
+       "      <td>-0.00003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Close Spread Buy</th>\n",
-       "      <td>-0.000122</td>\n",
-       "      <td>-0.000125</td>\n",
+       "      <td>-0.000110</td>\n",
+       "      <td>-0.00010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Close Spread Sell</th>\n",
-       "      <td>0.000109</td>\n",
-       "      <td>0.000128</td>\n",
+       "      <td>0.000080</td>\n",
+       "      <td>0.00008</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   MSolutions      Nova\n",
-       "Spread Buy           0.000100  0.000085\n",
-       "Spread Sell         -0.000125 -0.000047\n",
-       "Close Spread Buy    -0.000122 -0.000125\n",
-       "Close Spread Sell    0.000109  0.000128"
+       "                   MSolutions     Nova\n",
+       "Spread Buy           0.000095  0.00007\n",
+       "Spread Sell         -0.000110 -0.00003\n",
+       "Close Spread Buy    -0.000110 -0.00010\n",
+       "Close Spread Sell    0.000080  0.00008"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# create a results dataframe from the above print statements with MSolutions and Nova as a column, and spread buy, spread sell, close spread buy, and close spread sell as rows\n",
-    "results = pd.DataFrame({'MSolutions': [msolutions_joined_no_na_buy['Spread'].mean(), msolutions_joined_no_na_sell['Spread'].mean(), \n",
-    "                                       msolutions_joined_no_na_buy['Close Spread'].mean(), msolutions_joined_no_na_sell['Close Spread'].mean()],\n",
-    "                        'Nova': [nova_joined_buy['Spread'].mean(), nova_joined_sell['Spread'].mean(), nova_joined_buy['Close Spread'].mean(), \n",
-    "                                 nova_joined_sell['Close Spread'].mean()]}, index=['Spread Buy', 'Spread Sell', 'Close Spread Buy', 'Close Spread Sell'])\n",
+    "results = pd.DataFrame({'MSolutions': [msolutions_joined_no_na_buy['Spread'].median(), msolutions_joined_no_na_sell['Spread'].median(), \n",
+    "                                       msolutions_joined_no_na_buy['Close Spread'].median(), msolutions_joined_no_na_sell['Close Spread'].median()],\n",
+    "                        'Nova': [nova_joined_buy['Spread'].median(), nova_joined_sell['Spread'].median(), nova_joined_buy['Close Spread'].median(), \n",
+    "                                 nova_joined_sell['Close Spread'].median()]}, index=['Spread Buy', 'Spread Sell', 'Close Spread Buy', 'Close Spread Sell'])\n",
     "results"
    ]
   },
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
