--- a/double3_sma_nb.ipynb
+++ b/double3_sma_nb.ipynb
@@ -45,7 +45,19 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30234321\n",
+      "6259045\n",
+      "1251852\n",
+      "238753\n",
+      "171772\n"
+     ]
+    }
+   ],
    "source": [
     "# collect the actual data from csv file\n",
     "# filename = \"C:/Users/WilliamFetzner/Documents/Trading/DAT_XLSX_EURUSD_M1_2023.xlsx\"\n",
@@ -63,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,9 +275,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\WilliamFetzner\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\renkodf\\renkodf.py:46: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[\"datetime\"] = df.index\n"
+     ]
+    }
+   ],
    "source": [
     "if use_full_data:\n",
     "    brick_size_list = np.arange(0.0003, 0.00101, 0.00001)\n",
@@ -306,15 +331,6 @@
     "brick_size = 0.0005\n",
     "# multiply brick_size by 10,000 to get a whole number\n",
     "brick_size_str = str(int(brick_size*10000))\n",
-    "\n",
-    "# psar variables\n",
-    "start = 0.02\n",
-    "increment = 0.02\n",
-    "maximum = 0.2\n",
-    "\n",
-    "# impulse variables\n",
-    "lengthMA = 34\n",
-    "lengthSignal = 9\n",
     "\n",
     "# sma variables\n",
     "sma_length = 3\n",
@@ -1566,6 +1582,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# bring in the spread data\n",
+    "spread = pd.read_csv('spread_results_03_11_24_03_12_24.csv', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -1598,13 +1624,21 @@
     "# profit_df_select_day['direction'] = profit_df_select_day['direction'].str.split('+').str[1]\n",
     "\n",
     "# what if I didn't take the first TP?\n",
-    "profit_df_select_day['profit'] = np.where((profit_df_select_day['direction'].str.strip() == 'buy'),\n",
-    "                                            (profit_df_select_day['exit_price'] - profit_df_select_day['entry_price'])*per_lot*(lot_size), \n",
+    "profit_df_select_day['Nova_profit_initial'] = np.where((profit_df_select_day['direction'].str.strip() == 'buy'),\n",
+    "                                            ((profit_df_select_day['exit_price'] + spread.loc['Close Spread Buy', 'Nova']) - (profit_df_select_day['entry_price'] + spread.loc['Spread Buy', 'Nova']))\n",
+    "                                            * per_lot * (lot_size), \n",
     "                                            np.where((profit_df_select_day['direction'].str.strip() == 'sell'),\n",
-    "                                                    (profit_df_select_day['entry_price'] - profit_df_select_day['exit_price'])*per_lot*(lot_size), np.nan))\n",
+    "                                                    ((profit_df_select_day['entry_price'] + spread.loc['Spread Sell', 'Nova']) - (profit_df_select_day['exit_price'] + spread.loc['Close Spread Sell', 'Nova']))\n",
+    "                                                    * per_lot * (lot_size), np.nan))\n",
+    "profit_df_select_day['MSolutions_profit_initial'] = np.where((profit_df_select_day['direction'].str.strip() == 'buy'),\n",
+    "                                            ((profit_df_select_day['exit_price'] + spread.loc['Close Spread Buy', 'MSolutions']) - (profit_df_select_day['entry_price'] + spread.loc['Spread Buy', 'MSolutions']))\n",
+    "                                            * per_lot * (lot_size), \n",
+    "                                            np.where((profit_df_select_day['direction'].str.strip() == 'sell'),\n",
+    "                                                    ((profit_df_select_day['entry_price'] + spread.loc['Spread Sell', 'MSolutions']) - (profit_df_select_day['exit_price'] + spread.loc['Close Spread Sell', 'MSolutions']))\n",
+    "                                                    * per_lot * (lot_size), np.nan))\n",
     "profit_df_select_day = fx.add_swap_rates(profit_df_select_day, base_currency_rate, quote_currency_rate, lots=lot_size)\n",
-    "profit_df_select_day['nova_profit'] = profit_df_select_day['profit'] + nova_commission + profit_df_select_day['swap_rate']\n",
-    "profit_df_select_day['msolutions_profit'] = profit_df_select_day['profit'] + msolutions_commission + profit_df_select_day['swap_rate']"
+    "profit_df_select_day['nova_profit'] = profit_df_select_day['Nova_profit_initial'] + nova_commission + profit_df_select_day['swap_rate']\n",
+    "profit_df_select_day['msolutions_profit'] = profit_df_select_day['MSolutions_profit_initial'] + msolutions_commission + profit_df_select_day['swap_rate']"
    ]
   },
   {
@@ -3646,10 +3680,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# bring in the spread data\n",
-    "spread = pd.read_csv('spread_results_03_11_24_03_12_24.csv', index_col=0)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
